# OmegaGo

./: LICENSE  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h  config.status  configure  configure.ac
autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2
go/: GoBitBoard.cpp  GoBitBoard.h  GoGlobal.h  GoGtpCommandUtil.cpp  GoGtpCommandUtil.h  GoGtpEngine.cpp  GoGtpEngine.h  Makefile  Makefile.am  Makefile.in  bitboard_test
gtpengine/: Makefile  Makefile.am  Makefile.in
omegagomain/: Makefile  Makefile.am  Makefile.in  OmegaGoMain.cpp  omegago
omegagomain/.deps/: OmegaGoMain.Po  omegago-OmegaGoMain.Po
smartgame/: Makefile  Makefile.am  Makefile.in
